--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -7,7 +7,9 @@
   "rules": {
     "prefer-const": "error",
     "no-var": "error",
-    "no-unused-vars": "error",
-    "prettier/prettier": "error"
+    "no-unused-vars": "warn",
+    "prettier/prettier": "warn",
+    "react-hooks/exhaustive-deps": "warn",
+    "@next/next/no-img-element": "warn"
   }
 }
