--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -7,9 +7,10 @@
   "rules": {
     "prefer-const": "error",
     "no-var": "error",
-    "no-unused-vars": "warn",
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": "off",
     "prettier/prettier": "warn",
-    "react-hooks/exhaustive-deps": "warn",
+    "react-hooks/exhaustive-deps": "off",
     "@next/next/no-img-element": "warn"
   }
 }
