--- a/.github/workflows/deploy-ecr.yml
+++ b/.github/workflows/deploy-ecr.yml
@@ -111,7 +111,15 @@ jobs:
   # SSH 포트 열기 Job  
   open-ssh:
     runs-on: ubuntu-latest
+    needs: build-and-push
     steps:
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_CICD }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_CICD }}
+          aws-region: ${{ env.AWS_REGION }}
+
       - name: Open SSH port
         run: |
           echo "🔓 Opening SSH port..."
@@ -240,6 +248,13 @@ jobs:
     runs-on: ubuntu-latest
     if: always()
     steps:
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_CICD }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_CICD }}
+          aws-region: ${{ env.AWS_REGION }}
+          
       - name: Close SSH port
         run: |
           echo "🔒 Closing SSH port..."
