--- a/.github/workflows/deploy-ecr.yml
+++ b/.github/workflows/deploy-ecr.yml
@@ -9,6 +9,10 @@ on:
 env:
   AWS_REGION: ap-northeast-2
 
+permissions:
+  id-token: write   # OIDC 토큰 요청 권한
+  contents: read    # 코드 체크아웃 권한
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -64,8 +68,8 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_CICD }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_CICD }}
+          role-to-assume: ${{ secrets.AWS_OIDC_ROLE_ARN }}
+          role-session-name: github-actions-build
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Login to Amazon ECR
@@ -116,8 +120,8 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_CICD }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_CICD }}
+          role-to-assume: ${{ secrets.AWS_OIDC_ROLE_ARN }}
+          role-session-name: github-actions-ssh
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Open SSH port
@@ -249,8 +253,8 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_CICD }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_CICD }}
+          role-to-assume: ${{ secrets.AWS_OIDC_ROLE_ARN }}
+          role-session-name: github-actions-cleanup
           aws-region: ${{ env.AWS_REGION }}
           
       - name: Close SSH port
