--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,9 @@
 {
   "name": "iot-site-server",
   "version": "0.0.1",
+  "engines": {
+    "node": ">=24.0.0"
+  },
   "scripts": {
     "build": "nest build",
     "start": "nest start",
