fix: server lint fix
Signed-off-by: EunJiJung <bianbbc87@gmail.com>

--- a/server/.env.example
+++ b/server/.env.example
@@ -6,7 +6,7 @@ DB_HOST=localhost
 DB_PORT=3308
 DB_USERNAME=iot_user
 DB_PASSWORD=iot_password
-DB_DATABASE=iot_site
+DB_DATABASE=coss
 
 # JWT Configuration
 JWT_SECRET=your-jwt-secret-for-development
