refactor: local에서 minio로 aws s3를 사용하도록 추가
Signed-off-by: EunJiJung <bianbbc87@gmail.com>

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,16 +1,21 @@
+# local용 .env sample file
 # Node Environment
-NODE_ENV=development
+NODE_ENV=local
 
-# Database Configuration (Local Development)
+# Database Configuration (Local Environment)
 DB_HOST=localhost
 DB_PORT=3308
-DB_USERNAME=iot_user
-DB_PASSWORD=iot_password
+DB_USERNAME=local
+DB_PASSWORD=user_password
 DB_DATABASE=coss
 
-# JWT Configuration
-JWT_SECRET=your-jwt-secret-for-development
+# MinIO Configuration
+MINIO_ENDPOINT=http://localhost:9000
+MINIO_PORT=9000
+MINIO_ACCESS_KEY=minio_admin
+MINIO_SECRET_KEY=admin_password
+BUCKET_NAME=local-assets-1
+MINIO_REGION=ap-northeast-2
 
-# AWS S3 Configuration
-AWS_REGION=ap-northeast-2
-S3_BUCKET=your-s3-bucket-name
+# JWT Configuration
+JWT_SECRET=5gthG2KVzI+UDa1kwZjl+qvMypR6n65gkW/1KSCX8e8=
