--- a/web/.env.example
+++ b/web/.env.example
@@ -1,7 +1,7 @@
-# Development Environment Variables for Web Client
+# Local Environment Variables for Web Client
 
-# API Configuration (Development)
-NEXT_PUBLIC_API_URL=http://localhost:3001/api
+# API Configuration (Local)
+NEXT_PUBLIC_API_URL=http://localhost:3001/api/v1
 
 # File Upload Configuration  
 NEXT_PUBLIC_MAX_FILE_SIZE=10485760
