refactor: web의 .env.example에서 api url과 version 분리
Signed-off-by: EunJiJung <bianbbc87@gmail.com>

--- a/web/.env.example
+++ b/web/.env.example
@@ -1,7 +1,8 @@
 # Local Environment Variables for Web Client
 
 # API Configuration (Local)
-NEXT_PUBLIC_API_URL=http://localhost:3001/api/v1
+NEXT_PUBLIC_API_URL=http://localhost:3001/api
+NEXT_PUBLIC_API_VERSION=v1
 
 # File Upload Configuration  
 NEXT_PUBLIC_MAX_FILE_SIZE=10485760
