--- a/.github/workflows/deploy-server.yml
+++ b/.github/workflows/deploy-server.yml
@@ -134,7 +134,7 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_PRIVATE_KEY }}
-          source: "docker-compose.prod.yml"
+          source: "deploy/docker-compose.prod.yml"
           target: "/home/${{ secrets.EC2_USERNAME }}/"
 
       - name: Deploy docker-compose to EC2
