--- a/.github/workflows/deploy-server.yml
+++ b/.github/workflows/deploy-server.yml
@@ -5,10 +5,12 @@ on:
     branches: [main]
     paths:
       - 'server/**'
+      - '.github/workflows/deploy-server.yml'
   pull_request:
     branches: [main]
     paths:
       - 'server/**'
+      - '.github/workflows/deploy-server.yml'
 
 env:
   AWS_REGION: ap-northeast-2
