--- a/.github/workflows/deploy-server.yml
+++ b/.github/workflows/deploy-server.yml
@@ -130,13 +130,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Copy docker-compose.prod.yml to EC2
+      - name: Copy docker-compose.server.prod.yml to EC2
         uses: appleboy/scp-action@v0.1.4
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_PRIVATE_KEY }}
-          source: "deploy/docker-compose.prod.yml"
+          source: "deploy/docker-compose.server.prod.yml"
           target: "/home/${{ secrets.EC2_USERNAME }}/"
 
       - name: Deploy docker-compose to EC2
