--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -53,14 +53,19 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: "24"
+          cache: "npm"
+          cache-dependency-path: web/package-lock.json
       
-      - name: Restore node_modules
+      - name: Cache node_modules
         uses: actions/cache@v3
+        id: cache-web-deps
         with:
           path: web/node_modules
           key: web-deps-${{ hashFiles('web/package-lock.json') }}
-          restore-keys: |
-            web-deps-
+      
+      - name: Install dependencies
+        if: steps.cache-web-deps.outputs.cache-hit != 'true'
+        run: cd web && npm ci
       
       - name: Build static site
         run: cd web && npm run build
@@ -70,6 +75,7 @@ jobs:
         with:
           name: web-build
           path: web/out/
+          if-no-files-found: error
 
   deploy-web-to-s3:
     runs-on: ubuntu-latest
