--- a/.github/workflows/deploy-server.yml
+++ b/.github/workflows/deploy-server.yml
@@ -137,7 +137,7 @@ jobs:
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_PRIVATE_KEY }}
           source: "deploy/docker-compose.server.prod.yml"
-          target: "/home/${{ secrets.EC2_USERNAME }}/docker-compose.server.prod.yml"
+          target: "/home/${{ secrets.EC2_USERNAME }}/deploy/docker-compose.server.prod.yml"
 
       - name: Deploy docker-compose to EC2
         uses: appleboy/ssh-action@v1.0.0
@@ -166,9 +166,9 @@ jobs:
             SERVER_IMAGE=$SERVER_IMAGE
             EOF
 
-            docker-compose -f docker-compose.server.prod.yml down || true
-            docker-compose --env-file .env.prod -f docker-compose.server.prod.yml pull
-            docker-compose --env-file .env.prod -f docker-compose.server.prod.yml up -d
+            docker-compose -f deploy/docker-compose.server.prod.yml down || true
+            docker-compose --env-file .env.prod -f deploy/docker-compose.server.prod.yml pull
+            docker-compose --env-file .env.prod -f deploy/docker-compose.server.prod.yml up -d
 
             echo "⏳ Waiting for services to start..."
             sleep 60
@@ -184,13 +184,13 @@ jobs:
               fi
               if [ $i -eq 12 ]; then
                 echo "❌ API server health check failed"
-                docker-compose -f docker-compose.server.prod.yml logs server
+                docker-compose -f deploy/docker-compose.server.prod.yml logs server
                 exit 1
               fi
             done
 
             echo "📊 Container status:"
-            docker-compose -f docker-compose.server.prod.yml ps
+            docker-compose -f deploy/docker-compose.server.prod.yml ps
 
             echo "🐳 Deployed images:"
             echo "Server: $SERVER_IMAGE"
@@ -232,13 +232,13 @@ jobs:
             echo "🏥 Running EC2 internal health checks..."
 
             echo "📊 Container status:"
-            docker-compose -f docker-compose.server.prod.yml ps
+            docker-compose -f deploy/docker-compose.server.prod.yml ps
 
             if curl -f http://localhost:3001/api/health > /dev/null 2>&1; then
               echo "✅ Internal API server is healthy"
             else
               echo "❌ Internal API server not accessible"
-              docker-compose -f docker-compose.server.prod.yml logs server --tail=50
+              docker-compose -f deploy/docker-compose.server.prod.yml logs server --tail=50
               exit 1
             fi
 
