fix: next 빌드 결과물을 /.next로 변경
Signed-off-by: EunJiJung <bianbbc87@gmail.com>

--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -76,7 +76,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: web-build
-          path: web/out/
+          path: web/.next/
           if-no-files-found: error
 
   deploy-web-to-s3:
