--- a/.github/workflows/deploy-server.yml
+++ b/.github/workflows/deploy-server.yml
@@ -130,14 +130,18 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Copy docker-compose.server.prod.yml to EC2
-        uses: appleboy/scp-action@v0.1.4
+      - name: Upload to S3
+        run: |
+          aws s3 cp deploy/docker-compose.server.prod.yml s3://coss-site-docker-compose/docker-compose.server.prod.yml
+
+      - name: Download on EC2
+        uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_PRIVATE_KEY }}
-          source: "deploy/docker-compose.server.prod.yml"
-          target: "/home/${{ secrets.EC2_USERNAME }}/deploy/"
+          script: |
+            aws s3 cp s3://coss-site-docker-compose/docker-compose.server.prod.yml /home/${{ secrets.EC2_USERNAME }}/deploy/docker-compose.server.prod.yml
 
       - name: Deploy docker-compose to EC2
         uses: appleboy/ssh-action@v1.0.0
