fix: web build directory 검증 구문 변경
Signed-off-by: EunJiJung <bianbbc87@gmail.com>

--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -70,7 +70,7 @@ jobs:
       - name: Build static site
         run: | 
           cd web && npm run build
-          ls -la out/ || echo "ERROR: out directory not found"
+          ls -la .next/ || echo "ERROR: .next directory not found"
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
