--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -68,15 +68,20 @@ jobs:
         run: cd web && npm ci
       
       - name: Build static site
-        run: | 
-          cd web && npm run build
-          ls -la .next/ || echo "ERROR: .next directory not found"
-
+        run: cd web && npm run build
+      
+      - name: Debug paths
+        run: |
+          pwd
+          ls -la
+          ls -la web/
+          find . -name ".next" -type d
+      
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
           name: web-build
-          path: web/.next/
+          path: ./web/.next/
           if-no-files-found: error
 
   deploy-web-to-s3:
