--- a/server/.env.example
+++ b/server/.env.example
@@ -15,7 +15,7 @@ MINIO_PORT=9000
 MINIO_ACCESS_KEY=minio_admin
 MINIO_SECRET_KEY=admin_password
 BUCKET_NAME=local-assets-1
-MINIO_REGION=ap-northeast-2
+REGION=ap-northeast-2
 
 # JWT Configuration
 JWT_SECRET=5gthG2KVzI+UDa1kwZjl+qvMypR6n65gkW/1KSCX8e8=
