refactor: server 배포 성공 후 이미지 정리 cmd 추가
Signed-off-by: EunJiJung <bianbbc87@gmail.com>

--- a/.github/workflows/deploy-server.yml
+++ b/.github/workflows/deploy-server.yml
@@ -211,6 +211,9 @@ jobs:
 
             echo "🎉 ECR deployment completed successfully!"
 
+            echo "🧹 Cleaning up old images..."
+            docker image prune -f
+
   close-ssh:
     needs: [open-ssh, deploy]
     runs-on: ubuntu-latest
