fix: .env.prod EOF 주입 시 \' 커멘드 추가로 올바른 문자열이 등록되도록 수정
Signed-off-by: EunJiJung <bianbbc87@gmail.com>

--- a/.github/workflows/deploy-server.yml
+++ b/.github/workflows/deploy-server.yml
@@ -166,7 +166,7 @@ jobs:
 
             cd deploy
             
-            cat > .env.prod << EOF
+            cat > .env.prod << 'EOF'
             DB_HOST=${{ secrets.DB_HOST }}
             DB_PORT=3306
             DB_USERNAME=advisor
