add: server health check module 추가
Signed-off-by: EunJiJung <bianbbc87@gmail.com>

--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -75,14 +75,13 @@ jobs:
           pwd
           ls -la
           ls -la web/
-          find . -name ".next" -type d
+          find . -name "dist" -type d
       
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
           name: web-build
-          path: |
-            web/.next/**/*
+          path: web/dist/
           if-no-files-found: error
 
   deploy-web-to-s3:
