--- a/web/package.json
+++ b/web/package.json
@@ -7,7 +7,8 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "tsc --noEmit && vite build",
+    "build": "tsc --noEmit && vite build --mode production",
+    "build:prod": "tsc --noEmit && vite build --mode prod",
     "preview": "vite preview",
     "test": "jest --passWithNoTests",
     "test:watch": "jest --watch",
