--- a/server/.env.example
+++ b/server/.env.example
@@ -19,3 +19,9 @@ REGION=ap-northeast-2
 
 # JWT Configuration
 JWT_SECRET=5gthG2KVzI+UDa1kwZjl+qvMypR6n65gkW/1KSCX8e8=
+
+# Swagger Configuration (Only Production)
+# SWAGGER_SERVER_URL=
+
+# CORS Configuration
+# ALLOWED_ORIGINS=
