--- a/server/.env.example
+++ b/server/.env.example
@@ -21,7 +21,7 @@ REGION=ap-northeast-2
 JWT_SECRET=5gthG2KVzI+UDa1kwZjl+qvMypR6n65gkW/1KSCX8e8=
 
 # Swagger Configuration (Only Production)
-# SWAGGER_SERVER_URL=
+SWAGGER_SERVER_URL=http://localhost:3001
 
 # CORS Configuration
-# ALLOWED_ORIGINS=
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001
