add: .env.prod smtp 변수 추가
Signed-off-by: EunJiJung <bianbbc87@gmail.com>

--- a/.github/workflows/deploy-server.yml
+++ b/.github/workflows/deploy-server.yml
@@ -180,6 +180,11 @@ jobs:
             REPOSITORY_NAME=${{ secrets.ECR_REPOSITORY }}
             SWAGGER_SERVER_URL=${{ secrets.SWAGGER_PRODUCTION_SERVER_URL }}
             ALLOWED_ORIGINS=${{ secrets.SWAGGER_ALLOWED_ORIGINS }}
+            SMTP_HOST=${{ secrets.SMTP_HOST }}
+            SMTP_PORT=${{ secrets.SMTP_PORT }}
+            SMTP_USER=${{ secrets.SMTP_USER }}
+            SMTP_PASS=${{ secrets.SMTP_PASS }}
+            FROM_EMAIL=${{ secrets.FROM_EMAIL }}
             EOF
 
             docker-compose -f docker-compose.server.prod.yml down || true
