--- a/.github/workflows/deploy-server.yml
+++ b/.github/workflows/deploy-server.yml
@@ -167,6 +167,7 @@ jobs:
             cd deploy
             
             cat > .env.prod << 'EOF'
+            DOMAIN_URL=${{ secrets.DOMAIN_URL }}
             DB_HOST=${{ secrets.DB_HOST }}
             DB_PORT=3306
             DB_USERNAME=advisor
