--- a/deploy/docker-compose.server.prod.yml
+++ b/deploy/docker-compose.server.prod.yml
@@ -7,6 +7,7 @@ services:
       - .env.prod
     environment:
       - NODE_ENV=production
+      - TZ=Asia/Seoul
     ports:
       - "3000:3000"
     healthcheck:
