--- a/server/package.json
+++ b/server/package.json
@@ -41,23 +41,27 @@
     "@types/nodemailer": "^7.0.1",
     "@types/passport-jwt": "^4.0.1",
     "@types/xlsx": "^0.0.35",
+    "@willsoto/nestjs-prometheus": "^6.0.2",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "mariadb": "^3.2.2",
     "multer": "^2.0.2",
     "mysql2": "^3.15.1",
+    "nest-winston": "^1.10.2",
     "nestjs-otel": "^7.0.1",
-    "nestjs-pino": "^4.4.1",
     "nodemailer": "^7.0.6",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
-    "pino": "^10.1.0",
     "pino-pretty": "^13.1.2",
+    "prom-client": "^15.1.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
     "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.17",
+    "winston": "^3.18.3",
+    "winston-daily-rotate-file": "^5.0.0",
+    "winston-loki": "^6.1.3",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
