feat: env.prod에 frontend url 추가
Signed-off-by: EunJiJung <bianbbc87@gmail.com>

--- a/.github/workflows/deploy-server.yml
+++ b/.github/workflows/deploy-server.yml
@@ -181,6 +181,7 @@ jobs:
             REPOSITORY_NAME=${{ secrets.ECR_REPOSITORY }}
             SWAGGER_SERVER_URL=${{ secrets.SWAGGER_PRODUCTION_SERVER_URL }}
             ALLOWED_ORIGINS=${{ secrets.SWAGGER_ALLOWED_ORIGINS }}
+            FRONTEND_URL=${{ secrets.FRONTEND_URL }}
             SMTP_HOST=${{ secrets.SMTP_HOST }}
             SMTP_PORT=${{ secrets.SMTP_PORT }}
             SMTP_USER=${{ secrets.SMTP_USER }}
