feat: .env node_env 등록 설정
Signed-off-by: EunJiJung <bianbbc87@gmail.com>

--- a/.github/workflows/deploy-server.yml
+++ b/.github/workflows/deploy-server.yml
@@ -165,6 +165,10 @@ jobs:
             aws ecr get-login-password --region ap-northeast-2 | docker login --username AWS --password-stdin ${{ secrets.ECR_REGISTRY }}
 
             cd deploy
+
+            cat > .env << 'EOF'
+            NODE_ENV=production
+            EOF
             
             cat > .env.prod << 'EOF'
             DOMAIN_URL=${{ secrets.DOMAIN_URL }}
