--- a/server/package.json
+++ b/server/package.json
@@ -45,6 +45,7 @@
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "crypto": "^1.0.1",
     "mariadb": "^3.2.2",
     "multer": "^2.0.2",
     "mysql2": "^3.15.1",
