--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -114,7 +114,20 @@ jobs:
       
       - name: Deploy to S3
         run: |
-          aws s3 sync web/out/ s3://${{ secrets.WEB_S3_BUCKET_NAME }}/ --delete
+          aws s3 sync web/out/ s3://${{ secrets.WEB_S3_BUCKET_NAME }}/ --delete \
+            --cache-control "public,max-age=300" \
+            --exclude "*.html" \
+            --exclude "*.js" \
+            --exclude "*.css"
+          aws s3 sync web/out/ s3://${{ secrets.WEB_S3_BUCKET_NAME }}/ \
+            --cache-control "public,max-age=31536000,immutable" \
+            --exclude "*" \
+            --include "*.js" \
+            --include "*.css"
+          aws s3 sync web/out/ s3://${{ secrets.WEB_S3_BUCKET_NAME }}/ \
+            --cache-control "no-cache" \
+            --exclude "*" \
+            --include "*.html"
       
       - name: Invalidate CloudFront
         run: |
