--- a/.github/workflows/deploy-server.yml
+++ b/.github/workflows/deploy-server.yml
@@ -174,9 +174,9 @@ jobs:
             DOMAIN_URL=${{ secrets.DOMAIN_URL }}
             DB_HOST=${{ secrets.DB_HOST }}
             DB_PORT=3306
-            DB_USERNAME=advisor
-            DB_PASSWORD=${{ secrets.DB_PASSWORD }}
             DB_DATABASE=coss
+            AWS_SECRET_NAME=${{ secrets.AWS_SECRET_NAME }}
+            AWS_REGION=${{ env.AWS_REGION }}
             JWT_SECRET=${{ secrets.JWT_SECRET }}
             REGION=${{ env.AWS_REGION }}
             BUCKET_NAME=${{ secrets.S3_BUCKET }}
