--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.901.0",
+    "@aws-sdk/client-secrets-manager": "^3.990.0",
     "@aws-sdk/s3-request-presigner": "^3.901.0",
     "@nestjs/common": "^11.0.8",
     "@nestjs/config": "^4.0.2",
